@@ -1,5 +1,11 @@
 2007-02-07  Tim-Philipp Müller  <tim at centricular dot net>
 
+	* src/unix.c: (gnet_unix_socket_unlink):
+	  Make this function static, it's an internal utility function.
+	  Also shuffle a few macros around.
+
+2007-02-07  Tim-Philipp Müller  <tim at centricular dot net>
+
 	Patch by: Zeeshan Ali <zeenix gmail com>
 
 	* AUTHORS:
